--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,7 +368,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right;
+  background: url("/home/masinha/github/gaurangisinha.github.io/assets/img/bg-image.jpg") top right;
   background-size: cover;
 }
 #hero .container {
@@ -977,6 +977,12 @@ section {
 /*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
+/* #contact {
+  width: 100%;
+  height: 100vh;
+  background: url("/home/masinha/github/gaurangisinha.github.io/assets/img/bg-image.jpg") top right;
+  background-size: cover;
+} */
 .contact .info {
   width: 100%;
   background: #fff;
