--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -385,10 +385,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  color: #e8dddd;
+  color: #0a0000;
 }
 #hero h2 {
-  color: #f1f4f54e;
+  color: #fefefe;
   margin: 10px 0 0 0;
   font-size: 22px;
 }
