--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -442,7 +442,7 @@ section {
 }
 
 .section-bg {
-  background-color: #e7f8f6;
+  background-color: #dec2d9;
 }
 
 .section-title {
@@ -524,7 +524,7 @@ section {
 .about .content h3 {
   font-weight: 700;
   font-size: 26px;
-  color: #555555;
+  color: #080707;
 }
 .about .content ul {
   list-style: none;
